# ea_okx

./: .gitignore  Cargo.toml  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MOBILE_OPTIMIZATION_GUIDE.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  README.md  TAURI_FRONTEND_COMPLETE.md  TAURI_IMPLEMENTATION_SUMMARY.md  THEME_FEATURE.md  THEME_OPTIMIZATION.md  THEME_SWITCHER.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/: settings.local.json
.claude/agents/: spec-task-executor.md
.qoder/: SESSION_SUMMARY.md
.qoder/quests/: front-end-styling.md  quantitative-trading-system-1763609679.md  quantitative-trading-system.md
.qoder/repowiki/en/content/: Backtesting Methodology.md  Data Flow Between Layers.md  Database Schema Design.md  Directory Structure Breakdown.md  Environment Configuration.md  Getting Started.md  Risk Management Framework.md  Strategy Development Guide.md  System Overview.md  Technology Stack.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Data API.md  Risk API.md  Strategy API.md  System API.md  Trading API.md
.qoder/repowiki/en/content/Backend Architecture/: Backend Architecture.md
.qoder/repowiki/en/content/Backend Architecture/Backtesting Engine/: Audit Trail.md  Backtesting Engine.md  Backtesting Simulation.md  Cost Modeling.md  Performance Metrics.md  Portfolio Simulation.md
.qoder/repowiki/en/content/Backend Architecture/Core Models/: Core Models.md  Order Model.md  Position Model.md  Price Model.md  Quantity Model.md  Strategy Model.md  Symbol Model.md  Trade Model.md  Type Safety and Validation.md
.qoder/repowiki/en/content/Backend Architecture/Data Layer/: Data Collection.md  Data Layer.md  Data Quality Control.md  Data Storage.md
.qoder/repowiki/en/content/Backend Architecture/Monitoring System/: Alerting System.md  Audit Trail.md  Metrics Collection.md  Monitoring Service.md  Monitoring System.md
.qoder/repowiki/en/content/Backend Architecture/OKX Client Integration/: Authentication Mechanism.md  Data Models.md  Error Handling and Retry.md  OKX Client Integration.md  REST API Client.md  WebSocket Client.md
.qoder/repowiki/en/content/Backend Architecture/Risk Management/: Pre-Trade Validation.md  Risk Alerting System.md  Risk Management.md  Value-at-Risk (VaR) Calculation.md
.qoder/repowiki/en/content/Backend Architecture/Strategy Framework/: Lifecycle Management.md  Metrics Collection.md  (+3 more)
.qoder/repowiki/en/content/Frontend Architecture/: Component Structure.md  Composables.md  Frontend Architecture.md  Routing System.md  State Management.md  Tauri Integration.md  Testing Strategy.md  UI Components and Styling.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
.serena/: project.yml
.serena/memories/: design_recommendations.md  frontend_architecture.md  mobile_optimization_summary.md  project_overview.md
config/: README.md
crates/backtest/: Cargo.toml
crates/backtest/src/: cost_model.rs  engine.rs  error.rs  events.rs  lib.rs  portfolio.rs  results.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/core/src/models/: mod.rs  order.rs  position.rs  strategy.rs  trade.rs
crates/data/: Cargo.toml
crates/data/src/: collector.rs  error.rs  lib.rs  quality.rs  storage.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: alerts.rs  error.rs  lib.rs  metrics.rs  service.rs
crates/okx-client/: Cargo.toml
crates/okx-client/src/: auth.rs  error.rs  lib.rs  rest.rs  websocket.rs
crates/okx-client/src/models/: mod.rs  request.rs  response.rs  websocket.rs
crates/risk/: Cargo.toml
crates/risk/src/: error.rs  lib.rs  validators.rs  var.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: error.rs  lib.rs  lifecycle.rs  metrics.rs  signal.rs  traits.rs
crates/trading/: Cargo.toml
crates/trading/src/: algorithms.rs  error.rs  lib.rs  order_manager.rs  state_machine.rs
examples/: README.md  backtest_simple.rs  grid_trading.rs  rsi_strategy.rs  simple_ma_crossover.rs  websocket_ticker.rs
frontend/: ICON_FIX.md  KEEP_ALIVE_IMPLEMENTATION.md  README.md  SASS_FIXES.md  package-lock.json  playwright.config.ts  vite.config.ts
frontend/src/: App.vue
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/src/commands/: data.rs  mod.rs
frontend/src/e2e/: dashboard.spec.ts
frontend/src/router/: index.ts
frontend/src/stores/: config.ts  market.ts  strategy.ts  trade.ts  user.ts
frontend/src/stores/__tests__/: market.spec.ts  strategy.spec.ts  trade.spec.ts  user.spec.ts
frontend/src/styles/: index.scss
frontend/src/views/: Backtest.vue  Risk.vue  Settings.vue  Trading.vue
migrations/: 001_initial_schema.sql  002_continuous_aggregates.sql
src/: components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: mod.rs  risk.rs  strategy.rs  system.rs  trading.rs  websocket.rs
src-tauri/src/services/: mod.rs  strategy.rs  strategy_execution.rs  strategy_monitor.rs
src-tauri/tests/: trading_integration.rs
src/components/: CreateTemplateDialog.vue  FloatingActionButton.vue  ImportTemplateDialog.vue  LazyImage.vue  MobileBottomNav.vue  ResponsiveChart.vue  ResponsiveHeader.vue  StrategyCard.vue  SwipeNavigation.vue  TemplateBrowser.vue  TemplateCard.vue  TemplatePreviewDialog.vue  VirtualList.vue
src/composables/: useChartResponsive.ts  useResponsive.ts  useSwipe.ts  useTauriEvents.ts  useTheme.ts
src/composables/__tests__/: useTauriEvents.spec.ts
src/layouts/: MainLayout.vue
src/router/: index.ts
src/services/: strategyService.ts  strategyTemplateService.ts
src/stores/__tests__/: config.spec.ts
src/styles/: animations.scss  buttons.scss  index.scss  theme.scss  utilities.scss  variables.scss
src/types/: strategy.ts  strategyTemplate.ts
src/utils/: strategyValidation.ts
src/views/: Backtest.vue  Dashboard.vue  Risk.vue  Settings.vue  Strategies.vue  StrategyDetail.vue  Templates.vue  Trading.vue
src/views/__tests__/: Dashboard.spec.ts
tests/: integration_test.rs
(+5 files in other folders)
