[package]
name = "ea-okx-backtest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ea-okx-core = { path = "../core" }
# ea-okx-data = { path = "../data" }  # Temporarily disabled due to sqlx macro compile-time requirements
ea-okx-strategy = { path = "../strategy" }

tokio = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
