[package]
name = "ea-okx-quant"
version = "0.1.0"
description = "Professional quantitative trading platform for OKX cryptocurrency exchange"
authors = ["EA OKX Quant Team"]
license = "MIT"
repository = "https://github.com/okx/ea-okx-quant"
edition = "2021"
rust-version = "1.75.0"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
